[gd_scene load_steps=24 format=3 uid="uid://cctjmyrbqo5e3"]

[ext_resource type="Texture2D" uid="uid://qq1yiaqt6yka" path="res://assets/Foozle's Void Pack/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Engine Effects/PNGs/Main Ship - Engines - Base Engine - Spritesheet.png" id="1_4o64b"]
[ext_resource type="Script" path="res://script/player.gd" id="1_qenir"]
[ext_resource type="Texture2D" uid="uid://7ufich3l2w75" path="res://assets/Foozle's Void Pack/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Bases/PNGs/Main Ship - Base - Full health.png" id="1_r2mhd"]
[ext_resource type="Texture2D" uid="uid://c3866cg6y57wq" path="res://assets/Foozle's Void Pack/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Weapons/PNGs/Main Ship - Weapons - Auto Cannon.png" id="3_54ej1"]
[ext_resource type="Texture2D" uid="uid://bg1hrkj82c87x" path="res://assets/Foozle's Void Pack/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Engines/PNGs/Main Ship - Engines - Base Engine.png" id="4_hcrjr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_in1b1"]
atlas = ExtResource("3_54ej1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gty3q"]
atlas = ExtResource("3_54ej1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vweb"]
atlas = ExtResource("3_54ej1")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdfy"]
atlas = ExtResource("3_54ej1")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nremc"]
atlas = ExtResource("3_54ej1")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk0r1"]
atlas = ExtResource("3_54ej1")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0valj"]
atlas = ExtResource("3_54ej1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_po5xu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_in1b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gty3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vweb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nremc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk0r1")
}],
"loop": true,
"name": &"firing",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0valj")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gis87"]
atlas = ExtResource("1_4o64b")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yft3l"]
atlas = ExtResource("1_4o64b")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_he8g0"]
atlas = ExtResource("1_4o64b")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7ey8"]
atlas = ExtResource("1_4o64b")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pjwv"]
atlas = ExtResource("1_4o64b")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg4a4"]
atlas = ExtResource("1_4o64b")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob675"]
atlas = ExtResource("1_4o64b")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q88xf"]
atlas = ExtResource("1_4o64b")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mlat0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gis87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yft3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he8g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7ey8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pjwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg4a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob675")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q88xf")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gh2s"]
radius = 14.0357

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qenir")

[node name="mainShip" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_r2mhd")

[node name="weapons" type="AnimatedSprite2D" parent="mainShip"]
z_index = -1
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_po5xu")
animation = &"idle"
autoplay = "idle"

[node name="Muzzle1" type="Marker2D" parent="mainShip/weapons"]
position = Vector2(-9, -12)

[node name="Muzzle2" type="Marker2D" parent="mainShip/weapons"]
position = Vector2(9, -12)

[node name="engine" type="Sprite2D" parent="mainShip"]
z_index = -1
position = Vector2(0, 4)
texture = ExtResource("4_hcrjr")

[node name="engineEffect" type="AnimatedSprite2D" parent="mainShip/engine"]
position = Vector2(0, 1)
scale = Vector2(1, 1.2)
sprite_frames = SubResource("SpriteFrames_mlat0")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_4gh2s")

[node name="reloadTimer" type="Timer" parent="."]

[connection signal="timeout" from="reloadTimer" to="." method="_on_reload_timer_timeout"]
